<resources>
    <string name="app_name">РасписаниеBeta</string>
    <string name="toolBar_option">Выход</string>
    <string name="sunday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="lesson_fragment_tv_lesson">Предмет</string>
    <string name="lesson_fargment_et_Lesson_hint">Введите название занятия</string>
    <string name="lesson_fragment_tv_Prof">Преподаватель</string>
    <string name="lesson_fargment_et_Prof_hint">Введите ФИО преподавателя</string>
    <string name="lesson_fragment_tv_room">Аудитория</string>
    <string name="lesson_fargment_et_room_hint">Введите номер аудитории</string>
    <string name="lesson_fragment_tv_Time">Время</string>
    <string name="lesson_fragment_btn_ok">ОК</string>
    <string name="lesson_fragment_btn_cancel">Отмена</string>
    <string name="new_lesson">Новый предмет</string>
    <string name="no_lessons">Предметы отсутствуют</string>
    <string name="no_name_lesson">Необходимо обязательно ввести название предмета</string>
    <string name="lesson_fragment_tv_Type">Тип предмета</string>
    <string name="lesson_fragment_tv_When">Когда происходит пара</string>

</resources>
